# pi-rs

./: .gitignore  AGENTS.md  Cargo.toml  MERGE-REPORT.md  Makefile  PLAN.md  README.md  RELEASING.md  REPORT.md  VALIDATION.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  dogfood-tier4-task.md  rfd-0026-implement-e2b-campaign.toml  rfd-0026-sprites-contextfs-campaign.toml  rfd-0030-lsp-critic-campaign.toml  rfd-0031-monitor-critic-campaign.toml
.review-target-archive/crates/pi-agent-core/: Cargo.toml
.review-target-archive/crates/pi-orchestrate/: Cargo.toml
.review-target-archive/crates/pi-search-proto/: Cargo.toml
.review-target-archive/crates/pi-tool-types/: Cargo.toml
.review-target-archive/crates/pi-tui/: Cargo.toml
crates/pi-agent-core/: Cargo.toml
crates/pi-agent-core/src/: compaction.rs  context.rs  event.rs  lib.rs  router.rs  runtime.rs  session.rs  settings.rs  system.rs
crates/pi-agent-core/tests/: compaction.rs  compaction_extra.rs  embedding_router_routes.rs  onnx_real_engine.rs  router_auto.rs  router_overrides.rs  router_static.rs  runtime_context_load.rs  runtime_h1_panic_guard.rs  runtime_h2_budget_guards.rs  runtime_loop.rs  runtime_sandbox.rs  runtime_transport_error.rs  session_clone.rs  session_clone_extra.rs  session_extra.rs  session_jsonl.rs  set_role.rs  settings_save.rs  system_extra.rs  tale_ep_budget_telemetry.rs  trajectory_variants.rs
crates/pi-ai/: Cargo.toml
crates/pi-ai/data/: pricing.json
crates/pi-ai/examples/: probe.rs
crates/pi-ai/src/: auth.rs  cost.rs  discover.rs  http.rs  lib.rs  message.rs  oauth.rs  provider.rs  registry.rs  stream.rs  tokenizer.rs  tool.rs
crates/pi-ai/tests/: anthropic_conversion.rs  anthropic_cost.rs  anthropic_error_branch.rs  anthropic_extra.rs  anthropic_more.rs  anthropic_stream.rs  anthropic_thinking_signature.rs  auth.rs  azure_extra.rs  azure_extra2.rs  azure_stream.rs  bedrock_extra.rs  bedrock_extra2.rs  bedrock_stream.rs  discover_models.rs  google_extra.rs  google_stream.rs  message.rs  oauth.rs  oauth_endpoints.rs  oauth_extra.rs  oauth_login_url.rs  openai_compat_stream.rs  openai_conversion.rs  openai_dispatch_router.rs  openai_extra.rs  openai_reasoning_effort.rs  openai_responses_request_shape.rs  openai_responses_stream_parse.rs  openai_responses_usage_population.rs  openai_stream.rs  openai_stream_more.rs  openai_tool_use_stream.rs  pricing_provenance.rs  registry.rs  registry_compat.rs  tokenizer.rs
crates/pi-build/: Cargo.toml
crates/pi-build/examples/: code-reviewer.toml
crates/pi-build/src/: build.rs  codegen.rs  error.rs  lib.rs  manifest.rs
crates/pi-build/tests/: codegen_e2e.rs  distribution.rs  invariants.rs  parse.rs
crates/pi-coding-agent/: Cargo.toml
crates/pi-coding-agent/agents/: autoresearch-worker.md  code-reviewer.md  halo-implementer.md  halo-proposer.md
crates/pi-coding-agent/src/: cli.rs  cmd.rs  context.rs  extensions.rs  footer.rs  keymap.rs  lib.rs  markdown.rs  modes.rs  packages.rs  picker.rs  picker_model.rs  prompts.rs  renderer.rs  sdk.rs  settings_ui.rs  share.rs  skills.rs  slash.rs  startup.rs  telemetry.rs  themes.rs
crates/pi-coding-agent/tests/: autoresearch_confidence.rs  autoresearch_confidence_extra.rs  autoresearch_core.rs  autoresearch_dashboard.rs  autoresearch_dashboard_extra.rs  autoresearch_hooks.rs  autoresearch_log_extra.rs  autoresearch_log_extra2.rs  autoresearch_log_upstream.rs  autoresearch_recursive.rs  autoresearch_session_extra.rs  autoresearch_slash.rs  autoresearch_slash_extra.rs  autoresearch_tools.rs  autoresearch_tools_extra.rs  cli.rs  cmd.rs  cmd_extra.rs  context_extra.rs  context_extra2.rs  evolve_apply.rs  evolve_benchmark.rs  evolve_orchestrator.rs  evolve_rollback_on_regression.rs  evolve_subcommand.rs  evolve_tick.rs  extensions.rs  extensions_extra.rs  extensions_hooks.rs  extensions_keymap.rs  extensions_more.rs  extensions_replace.rs  extensions_slash.rs  extensions_startup.rs  fake_lsp_server.py  footer.rs  footer_powerline.rs  halo_config.rs  halo_cycle.rs  halo_proposer.rs  (+57 more)
crates/pi-coding-agent/themes/: dracula.json  gruvbox-dark.json  nord.json  poimandres.json  tokyo-night.json
crates/pi-orchestrate/: Cargo.toml
crates/pi-orchestrate/src/: dispatch.rs  lib.rs  merge.rs  plan.rs  runner.rs  validate.rs  verdict.rs
crates/pi-orchestrate/tests/: cherry_pick_range.rs  format_plan.rs  parse_minimal_campaign.rs  runner_v0.rs  runner_v1.rs  runner_v1_fixes.rs  topological_order.rs  validate_rejects_cycles.rs  validate_rejects_undefined_dep.rs  worktree_prune.rs
crates/pi-sandbox/: Cargo.toml
crates/pi-sandbox-protocol/: Cargo.toml
crates/pi-sandbox-protocol/src/: framing.rs  lib.rs
crates/pi-sandbox-protocol/tests/: round_trip.rs
crates/pi-sandbox-rootfs/: Cargo.toml  build.sh
crates/pi-sandbox-rootfs/src/: lib.rs
crates/pi-sandbox-worker/: Cargo.toml
crates/pi-sandbox-worker/src/: dispatch.rs  lib.rs  listener.rs  main.rs
crates/pi-sandbox-worker/tests/: dispatch_smoke.rs
crates/pi-sandbox/docs/: NETWORKING.md
crates/pi-sandbox/src/: cache.rs  contextfs.rs  contextfs_embedder.rs  lib.rs  local.rs  provider.rs
crates/pi-sandbox/tests/: contextfs_local_rw_mount.rs  contextfs_loopback_rw_mount.rs  firecracker_apk_demo.rs  firecracker_contextfs_mount.rs  firecracker_contextfs_rw_mount.rs  firecracker_contextfs_tests_only_policy.rs  firecracker_per_call_hygiene.rs  firecracker_seccomp.rs  firecracker_smoke.rs  firecracker_uid_separation.rs  firecracker_warm_bench.rs  firecracker_web_search_proxy.rs  firecracker_workload.rs  microvm_provider_e2e.rs  microvm_traits.rs  remote_e2b_smoke.rs  sprites_contextfs_e2e.rs  sprites_host_orchestration.rs
crates/pi-sdk/: CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  MIGRATION.md  README.md  compatibility.toml
crates/pi-sdk-canary/: Cargo.toml
crates/pi-sdk-canary/src/: lib.rs
crates/pi-sdk/examples/: 01_minimal.rs  (+5 more)
crates/pi-stats/: Cargo.toml
crates/pi-tools/: Cargo.toml
crates/pi-tools-core/: Cargo.toml
crates/pi-tools-net/: Cargo.toml
crates/pi-tui/: Cargo.toml
(+516 files in other folders)
