[package]
name = "pi-agent-core"
version.workspace = true
edition.workspace = true
description = "Agent loop orchestration, session management, and event streaming for pi-rs"

[dev-dependencies]
tempfile.workspace = true
futures.workspace = true
async-trait.workspace = true

[dependencies]
pi-ai.workspace = true
pi-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
walkdir.workspace = true
sha2.workspace = true
toml = "0.8"
