[package]
name = "pi-agent-core"
version.workspace = true
edition.workspace = true
description = "Agent loop orchestration, session management, and event streaming for pi-rs"

[dev-dependencies]
tempfile.workspace = true
futures.workspace = true
async-trait.workspace = true

[dependencies]
pi-ai.workspace = true
pi-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
walkdir.workspace = true
sha2.workspace = true
reqwest.workspace = true
ndarray = "0.16"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "std", "api-24"] }
toml = "0.8"
