[package]
name = "pi-ai"
version.workspace = true
edition.workspace = true
description = "Unified multi-provider LLM API for pi-rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
base64.workspace = true
eventsource-stream.workspace = true
url.workspace = true
