[package]
name = "pi-coding-agent"
version.workspace = true
edition.workspace = true
description = "The `pi` binary: minimal terminal coding agent harness, Rust port"

[lib]
name = "pi_coding_agent"
path = "src/lib.rs"

[[bin]]
name = "pi"
path = "src/bin/pi.rs"

[dependencies]
pi-ai.workspace = true
pi-tools.workspace = true
pi-agent-core.workspace = true
pi-tui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
dirs.workspace = true
walkdir.workspace = true
regex.workspace = true
shellexpand.workspace = true
glob.workspace = true
chrono.workspace = true
which.workspace = true
nucleo-matcher.workspace = true
