[package]
name = "pi-coding-agent"
version.workspace = true
edition.workspace = true
description = "The `pi` binary: minimal terminal coding agent harness, Rust port"

[lib]
name = "pi_coding_agent"
path = "src/lib.rs"

[[bin]]
name = "pi"
path = "src/bin/pi.rs"

[dependencies]
pi-ai.workspace = true
pi-tools.workspace = true
pi-agent-core.workspace = true
pi-tui.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
crossterm = { version = "0.27", features = ["event-stream"] }
reqwest.workspace = true
unicode-width.workspace = true
dirs.workspace = true
walkdir.workspace = true
regex.workspace = true
shellexpand.workspace = true
glob.workspace = true
chrono.workspace = true
which.workspace = true
nucleo-matcher.workspace = true
notify.workspace = true
unicode-segmentation.workspace = true
ignore.workspace = true
sha2.workspace = true
tempfile.workspace = true
pi-stats.workspace = true
pi-orchestrate.workspace = true
uuid.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
wiremock.workspace = true
proptest.workspace = true
tokio-test.workspace = true
