[package]
name = "pi-sandbox-protocol"
version.workspace = true
edition.workspace = true
description = "Wire protocol for pi-rs microVM sandbox (host ↔ guest)"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "io-util"] }
tokio-test.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
