[package]
name = "pi-sandbox-rootfs"
version.workspace = true
edition.workspace = true
description = "Rootfs build recipe for pi-rs microVM sandbox (documentation + shell, no runtime artifact)"
publish = false

# No library, no binary. This crate exists for workspace
# discovery + version pinning of the build recipe.
[lib]
path = "src/lib.rs"
