[package]
name = "pi-sandbox-worker"
version.workspace = true
edition.workspace = true
description = "Guest-side worker binary for pi-rs microVM sandbox"
license.workspace = true
repository.workspace = true
authors.workspace = true
# Guest-side binary, distributed via the rootfs artifact, not crates.io.
publish = false

[[bin]]
name = "pi-sandbox-worker"
path = "src/main.rs"

# Tiny precompiled probe used by the seccomp regression test inside
# the guest. apk-add can't install gcc post-hardening (bash drops to
# pi-tool), so we bake the probe binary at rootfs build time.
[[bin]]
name = "pi-vsock-probe"
path = "src/bin/pi-vsock-probe.rs"

# Guest-side UDS↔vsock bridge for contextfs /work mount.
# Listens on /run/cfs.sock, forwards each connection to
# vsock(2, 5005) where pi-sandbox's host-side bridge accepts +
# proxies into cfs-fs-server. Started by the rootfs init.
[[bin]]
name = "pi-cfs-vsock-bridge"
path = "src/bin/pi-cfs-vsock-bridge.rs"

[lib]
name = "pi_sandbox_worker"
path = "src/lib.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile.workspace = true

[dependencies]
pi-sandbox-protocol.workspace = true
pi-tool-types.workspace = true
pi-tools-core.workspace = true
pi-search-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shellexpand.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt", "io-util", "signal", "net"] }
async-trait.workspace = true

# vsock is Linux-only — gate the dependency.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.7"
libc = "0.2"
