[package]
name = "pi-sandbox"
version.workspace = true
edition.workspace = true
description = "Sandbox abstraction for tool execution isolation in pi-rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono.workspace = true
pi-tools.workspace = true
pi-tool-types.workspace = true
pi-sandbox-rootfs.workspace = true
dirs.workspace = true
reqwest = { workspace = true, features = ["stream"] }
futures.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
wiremock.workspace = true
