[package]
name = "pi-sandbox"
version.workspace = true
edition.workspace = true
description = "Sandbox abstraction for tool execution isolation in pi-rs"
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# Exposes test-only helpers for integration tests.
test-helpers = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
pi-tools.workspace = true
pi-tool-types.workspace = true
pi-search-proto.workspace = true
# pi-sandbox-rootfs is a workspace-internal `publish = false` crate
# (build-recipe scaffolding only). Pre-pass-6 finding #1: depending
# on it would have made pi-sandbox unpublishable to crates.io.
# `ROOTFS_VERSION` was inlined into pi-sandbox/src/microvm/types.rs
# instead; the build.sh script in crates/pi-sandbox-rootfs has the
# same constant on its `VERSION=` line and must be bumped in lockstep.
pi-sandbox-protocol.workspace = true
pi-ai.workspace = true
dirs.workspace = true
reqwest = { workspace = true, features = ["stream"] }
base64.workspace = true
ignore.workspace = true
futures.workspace = true
percent-encoding.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
which.workspace = true
zstd = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.7"
libc = "0.2"

# Contextfs daemon library — embedded in-process for the
# Linux/Firecracker file-sharing path (RFD 0023 §3.5 / Commit G3
# prep). Pinned to a specific git commit at the workspace root;
# see Cargo.toml's `contextfsd = { git = …, rev = … }` entry.
# Linux-only because the daemon binds FUSE mounts.
contextfsd = { workspace = true }
# Wromm SDK — drives Sprites + E2B sandbox provisioning, file uploads,
# command execution via typed Rust API (RFD 0026 v2 Phase C2). Linux-
# only because Sprites itself is Linux-only.
wromm = { workspace = true }
# contextfs-mesh — transport-agnostic UDS expose/receive (RFD 0029).
# Linux-only because the underlying cfs-mesh tunnel uses Linux UDSes.
contextfs-mesh = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
wiremock.workspace = true
toml = "0.8"
anyhow = "1"

# The sprites host-orchestration integration tests call `_test_open_host_side_only`,
# which is gated on `feature = "test-helpers"` so it is not compiled into normal
# release builds.  Declare the test target explicitly so Cargo activates the
# feature when running that test binary.
[[test]]
name = "sprites_host_orchestration"
required-features = ["test-helpers"]
