[package]
name = "pi-sdk-canary"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Compatibility canary for pi-sdk — tiny embedder that exercises the public surface end-to-end"
publish = false

# Per RFD 0027 §3 + Commit G: this crate is the canary that catches
# API-drift regressions the cargo-semver-checks tool can't see (e.g.
# new behavior that compiles but breaks downstream call sites).
#
# At each pi-sdk MINOR release, CI does:
#   1. Pin pi-sdk-canary's `pi-sdk` dep to the *previous* MINOR.
#   2. Build + test pi-sdk-canary against the *new* MINOR.
#   3. If the canary breaks, the release blocks until the breaking
#      change is documented + an entry is added to MIGRATION.md.
#
# The intra-workspace pi-sdk dep below uses `path = ` for local
# development; CI overrides via Cargo.toml patch for the
# previous-MINOR pin.

[lib]
name = "pi_sdk_canary"
path = "src/lib.rs"

[dependencies]
pi-sdk = { workspace = true, features = ["mocks"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio-test.workspace = true
