[package]
name = "pi-stats"
version.workspace = true
edition.workspace = true
description = "Stats ingest, aggregation, and HTTP dashboard for pi-rs sessions"

[dependencies]
pi-ai = { workspace = true }
pi-agent-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
tracing = { workspace = true }
walkdir = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
