[package]
name = "pi-tools-core"
version.workspace = true
edition.workspace = true
description = "File + process tools for pi-rs (no network deps; guest-side compile-safe)"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }

[dependencies]
pi-tool-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true
ignore.workspace = true
regex.workspace = true
glob.workspace = true
shellexpand.workspace = true
chrono.workspace = true
