[package]
name = "pi-tools-core"
version.workspace = true
edition.workspace = true
description = "File + process tools for pi-rs (no network deps; guest-side compile-safe)"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }

[dependencies]
pi-tool-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true
ignore.workspace = true
regex.workspace = true
glob.workspace = true
shellexpand.workspace = true
chrono.workspace = true

# Linux-only seccomp filter for `bash` tool subprocesses when run
# inside the microvm worker (gated by `PI_SANDBOX_BASH_SECCOMP=1`
# env var set by the worker at startup). seccompiler is pure Rust
# (Amazon/Firecracker), no libseccomp C dep, links cleanly under
# x86_64-unknown-linux-musl.
[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.5"
libc = "0.2"
