[package]
name = "pi-tools-net"
version.workspace = true
edition.workspace = true
description = "Network-using tools for pi-rs (web_search via reqwest)"

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
tokio = { workspace = true, features = ["full"] }

[dependencies]
pi-tool-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
base64.workspace = true
