[package]
name = "pi-tools"
version.workspace = true
edition.workspace = true
description = "Built-in tools for the pi-rs coding agent"

[dev-dependencies]
tempfile.workspace = true
base64.workspace = true
tokio = { workspace = true, features = ["full"] }

[dependencies]
pi-ai.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true
ignore.workspace = true
regex.workspace = true
glob.workspace = true
shellexpand.workspace = true
base64.workspace = true
chrono.workspace = true
