[package]
name = "pi-tools"
version.workspace = true
edition.workspace = true
description = "Built-in tools for the pi-rs coding agent"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dev-dependencies]
tempfile.workspace = true
base64.workspace = true
tokio = { workspace = true, features = ["full"] }
wiremock.workspace = true
serde_json.workspace = true
pi-ai.workspace = true
reqwest.workspace = true
async-trait.workspace = true

[dependencies]
pi-tools-core.workspace = true
pi-tools-net.workspace = true
