[package]
name = "pi-tui"
version.workspace = true
edition.workspace = true
description = "Terminal UI primitives with differential rendering for pi-rs"

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
