[package]
name = "pi-agent-core"
version.workspace = true
edition.workspace = true
description = "Agent loop orchestration, session management, and event streaming for pi-rs"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dev-dependencies]
tempfile.workspace = true
futures.workspace = true
async-trait.workspace = true
# Per pass-6 finding #7: pi-sandbox is in [dependencies]; the
# duplicate dev-dep entry was redundant (cargo accepted but it adds
# confusion for readers). Removed.

[dependencies]
pi-ai.workspace = true
pi-tools.workspace = true
pi-sandbox.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
walkdir.workspace = true
sha2.workspace = true
reqwest.workspace = true
ndarray = "0.16"
toml = "0.8"
tokenizers = { version = "0.20", default-features = false, features = ["onig"], optional = true }
tract-onnx = { version = "0.21", optional = true }

# Optional real gte-small inference for the autonomous router.
# Uses tract-onnx (pure Rust, no system dependency on libonnxruntime)
# so the feature is portable across glibc / musl-static and works on
# any machine without an ONNX Runtime install. When enabled, the
# router loads the gte-small model + tokenizer and replaces the
# Stage-1 hashed shim.
[features]
onnx-inference = ["tokenizers", "tract-onnx"]
